Added bio, contact info

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     color: black;
   }
   #FirstName{color: white}
+  #Bio{color: white}
   #ProjAct{margin-left: 25px}
   #Card1{margin-left: 15px}
   #Card2{margin-right: 15px}
@@ -41,8 +42,9 @@
   <div class= "block-color">
     <div class= "container">
       <div class = "center-align">
-        <img src="mypic.png" style="width:275px;height:275px;margin-top:25px">
-        <h3 id= "FirstName">Ashank Verma</h5>
+        <img src="mypic.png" style="width:250px;height:250px;margin-top:20px">
+        <h2 id= "FirstName">Ashank Verma</h2>
+        <h5 id="Bio">Hello! Welcome to my personal website. I'm passionate about current technologies ranging from different types of programming language to cutting-edge hardware.</h5>
       </div>
     </div>
   </div>
@@ -191,14 +193,21 @@
 
 
   <footer class="page-footer">
-    <div id="SocialContainer" class="container">
-
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-      © 2017 ashankv
-      </div>
-    </div>
-  </footer>
-
+       <div class="container">
+         <div class="row">
+           <div class="col l6 s12">
+             <h5 class="black-text text-lighten-4">Contact Me:</h5>
+             <ul>
+               <li><a class="black-text text-lighten-4" href="#!">ashank.verma@gmail.com</a></li>
+               <li><a class="black-text text-lighten-4" href="#!">(510) 940-3577</a></li>
+             </ul>
+           </div>
+         </div>
+       </div>
+       <div class="footer-copyright">
+         <div class="container">
+         © 2014 ashankv
+         </div>
+       </div>
+   </footer>
 </body>
