Updated title, copyright

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Starter Template - Materialize</title>
+  <title>Ashank Verma</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -206,7 +206,7 @@
        </div>
        <div class="footer-copyright">
          <div class="container">
-         © 2014 ashankv
+         © 2017 ashankv
          </div>
        </div>
    </footer>
